# ticketbot

./: .env  bot.py  main.py  pyproject.toml  review.py  update.sql
